# propositional-logic-evaluator

./: CMakeLists.txt  README.md
doc/: Checkpoint.tex  Report.tex
extension/: Makefile  assembly_writer.c  assembly_writer.h  evaluate.c  evaluate.h  help.txt  parse_tree.c  parse_tree.h
extension/testsuite/cases_false/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
extension/testsuite/cases_output/: 01.s  02.s  03.s  04.s  05.s  06.s
extension/testsuite/cases_true/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
src/: Makefile  assemble.c  assemble.h  bit_implementation.c  bit_implementation.h  computer.c  computer.h  decode.c  decode.h  emulate.c  emulate.h  execute.c  execute.h  fetch.c  fetch.h  symbol_table.c  symbol_table.h  tokenizer.c  tokenizer.h  transform.c  transform.h  transform_utils.c  transform_utils.h
